--- a/app/src/main/res/layout/rvitempessoa.xml
+++ b/app/src/main/res/layout/rvitempessoa.xml
@@ -27,10 +27,10 @@
                 android:textSize="30sp"/>
             <TextView
                 android:id="@+id/idadeView"
+                style="@style/Txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/nomeView"
-                android:textSize="25sp"
                 android:layout_toRightOf="@id/fotoView"/>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
