--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.App" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.App" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.App" parent="Base.Theme.App" />
+    <style name="Txt" parent="Theme.App">
+        <item name="android:textColor">#00ff00</item>
+        <item name="android:textSize">45sp</item>
+    </style>
+    <style name="btnStyle" parent="Theme.App">
+        <item name="android:textColor">#ff0000</item>
+        <item name="android:textSize">@dimen/txtBtnSize</item>
+    </style>
 </resources>
