--- a/app/src/main/res/layout/mainactfrag2.xml
+++ b/app/src/main/res/layout/mainactfrag2.xml
@@ -1,23 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lista de Frag"
-        tools:ignore="MissingConstraints" />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment_content"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Chamar"
-        android:id="@+id/btnFrag"
-        tools:ignore="MissingConstraints" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
