--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <dimen name="txt_idade">1</dimen>
-    <dimen name="txtBtnSize">25sp</dimen>
-</resources>
+<resources></resources>
